fix: make words-updated text visible

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header p {
 
 #words-updated {
     font-size: 0.68rem;
-    color: #555;
+    color: #818384;
     margin-top: 2px;
 }
 
